# events-face-service

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: urls.py
src/core/: settings.py
src/events/: models.py  serializers.py  views.py
src/events/migrations/: 0001_initial.py
src/sync/: models.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
src/user_auth/: serializers.py  urls.py  views.py
